bk_ida/gccida/g3/mtherr
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/mtherr/src/real.c:6253:22: error: use of undeclared identifier 'unk_746FC4'
v2 = ( const char *)&unk_746FC4; 
                     ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/mtherr/src/obj/real.o] Error 1
